<resources>
    <string name="app_name">ODDSPORTSL</string>
    <string name="login">LOGIN</string>
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="new_user">NEW USER</string>
    <string name="proxy_server">PROXY SERVER</string>
    <string name="connect_to_ts">CONNECT TO T.S.</string>
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="port_v">8080</string>
    <string name="user">USER</string>
    <string name="ip_v">127.0.0.1</string>
    <string name="select_program">1.SELECT PROGRAM</string>
    <string name="reload">2.RELOAD</string>
    <string name="new_bet">3.NEW BET</string>
    <string name="pending_bets">4.PENDING BETS</string>
    <string name="win_search">5.WIN SEARCH</string>
    <string name="cancel_main">6.CANCEL</string>
    <string name="my_account">7.MY ACCOUNT</string>
    <string name="open_close">8.OPEN/CLOSE</string>
    <string name="utilities">9.UTILITIES</string>
    <string name="logout">10.LOGOUT</string>
    <string name="selections"># SELECTIONS</string>
    <string name="instructions"># INSTRUCTIONS</string>
    <string name="last_live_results"># LAST LIVE RESULTS</string>
    <string name="last_coupons_saved"># LAST COUPONS SAVED</string>
    <string name="filters"># FILTERS</string>
    <string name="main">BET CLIENT</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="current">CURRENT</string>
    <string name="coupon">COUPON</string>
    <string name="full_load">FULL LOAD</string>
    <string name="refresh_list">REFRESH LIST</string>
    <string name="cancel_ac">CANCEL</string>
    <string name="select_program_title">SELECT COUPON AND PRESS \"OK\"</string>
    <string name="event">EVENT</string>
    <string name="live_betting">LIVE BETTING</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="data_bet">DATA</string>
    <string name="start_time">START TIME</string>
    <string name="rn">R/N</string>
    <string name="home_team">HOME TEAM</string>
    <string name="sport">SPORT</string>
    <string name="competition">COMPETITION</string>
    <string name="away_team">AWAY TEAM</string>
    <string name="bet_forecast">BET FORECAST:</string>
    <string name="clear">CLEAR</string>
    <string name="more">MORE</string>
    <string name="insert_new_bet">INSERT NEW BET</string>
</resources>
