<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/ll_bet_view"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_30">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center"
            android:text="@string/data_bet"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:gravity="center"
            android:text="@string/start_time"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/tv_rn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center"
            android:text="@string/rn"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sport"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/background_color_black"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_30">
        <TextView            android:textColor="@color/white"

            android:id="@+id/tv_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:textSize="10sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_team"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView            android:textSize="10sp"

            android:textColor="@color/white"
            android:id="@+id/tv_away_team"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:gravity="center"
            android:text="@string/away_team"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_competition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:textSize="10sp"
            android:gravity="center"
            android:text="@string/competition"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mintcream"/>
</LinearLayout>