<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    tools:context="com.odd.sportal.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_bg"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">


            <TextView
                android:id="@+id/tv_select_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/select_program"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_reload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/reload"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_new_bet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/new_bet"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_pending_bets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/pending_bets"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_win_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/win_search"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_cancel_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/cancel_main"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_my_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/my_account"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_open_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/open_close"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_utilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/utilities"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/logout"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom"/>





            <TextView
                android:id="@+id/tv_selections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/selections"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom_1"/>
            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/instructions"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom_1"/>
            <TextView
                android:id="@+id/tv_last_live_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/last_live_results"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom_1"/>
            <TextView
                android:id="@+id/tv_last_coupons_saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/last_coupons_saved"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom_1"/>
            <TextView
                android:id="@+id/tv_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_font_10"
                android:text="@string/filters"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:background="@drawable/main_bottom_1"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
