<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/length_20"
    android:background="@mipmap/bg"
    tools:context="com.odd.sportal.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/length_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login"
            android:textSize="@dimen/text_font_30"
            android:gravity="center"
            android:padding="@dimen/length_20"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/length_10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:ems="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>

            <EditText
                android:id="@+id/et_user_name"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@drawable/et_bg"
                android:padding="@dimen/length_10"
                android:maxLength="20"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/length_10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:ems="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@drawable/et_bg"
                android:padding="@dimen/length_10"
                android:maxLength="20"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/length_10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bt_login_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18dp"/>

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bt_login_bg"
                android:text="@string/new_user"
                android:textColor="@color/white"
                android:textSize="18dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c57616B"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ck_proxy_server"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proxy_server"/>

            <View
                android:layout_width="20dp"
                android:layout_height="1dp"/>
            <CheckBox
                android:id="@+id/ck_connect"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_ts"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:padding="@dimen/length_10"
        android:background="@drawable/shadow"
        android:id="@+id/ll_proxy_server"
        android:layout_marginTop="@dimen/length_20"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:ems="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"/>

            <EditText
                android:id="@+id/et_ip"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@drawable/et_bg"
                android:padding="@dimen/length_10"
                android:maxLength="20"
                android:minEms="6"
                android:text="127.0.0.0"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView

                android:layout_marginLeft="@dimen/length_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"/>

            <EditText
                android:id="@+id/et_port"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@drawable/et_bg"
                android:padding="@dimen/length_10"
                android:maxLength="20"
                android:hint="@string/port_v"
                android:singleLine="true"
                android:ems="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout><LinearLayout
        android:layout_marginTop="@dimen/length_10"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:ems="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"/>

            <EditText

                android:id="@+id/et_user"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@drawable/et_bg"
                android:padding="@dimen/length_10"
                android:maxLength="20"
                android:minEms="6"
                android:hint="@string/ip_v"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
