<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    tools:context="com.odd.sportal.SelectProgramActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_bg"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="@dimen/length_10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_refresh"
                android:padding="@dimen/length_10"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/seekbar_progress"
                android:text="@string/refresh_list"
                android:textColor="@color/white"/>

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <CheckBox
                android:id="@+id/ck_full_load"
                android:padding="@dimen/length_10"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_load"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_20">

            <TextView
                android:padding="@dimen/length_2"
                android:ems="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:padding="@dimen/length_2"
                android:ems="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:padding="@dimen/length_2"
                android:ems="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:padding="@dimen/length_2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/coupon"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>


        <ListView
            android:id="@+id/lv_listView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

        </ListView>

        <LinearLayout
            android:layout_margin="@dimen/length_10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_ok"
                android:padding="@dimen/length_10"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/seekbar_progress"
                android:text="@string/txt_ok"
                android:textColor="@color/white"/>

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <Button
                android:id="@+id/btn_cancel"
                android:padding="@dimen/length_10"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/seekbar_progress"
                android:text="@string/cancel_ac"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
